# Pomodoro_ESP

./: .gitignore  LICENSE  README.md
pomodoro-firmware/: partitions.csv
pomodoro-firmware/components/ADC_Lib/: CMakeLists.txt
pomodoro-firmware/components/ADC_Lib/include/: adc_lib.h
pomodoro-firmware/components/ADC_Lib/src/: adc_lib.c
pomodoro-firmware/components/Api_Client/: CMakeLists.txt
pomodoro-firmware/components/Api_Client/include/: api_client.h
pomodoro-firmware/components/Api_Client/src/: api_client.c
pomodoro-firmware/components/HTTPClient/: CMakeLists.txt
pomodoro-firmware/components/HTTPClient/include/: http_client.h
pomodoro-firmware/components/WebSocketClient/: CMakeLists.txt  README.md
pomodoro-firmware/components/Wifi_Connect/: CMakeLists.txt
pomodoro-firmware/main/: CMakeLists.txt  idf_component.yml  main.c  ui_events.h  vars_ui.c
pomodoro-firmware/main/LCD_Driver/: ST7789.c  ST7789.h
pomodoro-firmware/main/Pomodoro/: pomotask.c  pomotask.h
pomodoro-firmware/main/Task/: task_ui.c  task_ui.h
pomodoro-firmware/main/ui/: actions.h  fonts.h  screens.c  screens.h  styles.c  styles.h  ui.c  ui_font_material_icons.c  ui_font_material_icons_16.c  ui_font_material_icons_1_32.c  ui_font_material_icons_2.c  vars.h
pomodoro-ui-eez/src/ui/: screens.c  screens.h  styles.c  styles.h  vars.h
server-api/: requirements.txt
server-api/app/api/: routes.py
server-api/app/core/: config.py  ws_manager.py
server-api/app/models/: tasks.py
server-api/app/services/: notion.py
server-api/app/tools/: encoding.py  str_tools.py
(+6 files in other folders)
